--- a/submissions/Zihfred/google pop-up/style.css
+++ b/submissions/Zihfred/google pop-up/style.css
@@ -128,7 +128,7 @@ a {
 .pop_up-more:focus{
     border: 1px solid lightskyblue;
 }
-#more-checkbox,.popup_checkbox{
+.more-checkbox,.popup_checkbox{
     display: none;
     opacity: 0;
 }
