--- a/submissions/Aldegid/google-style-popup/app/sass/main.sass
+++ b/submissions/Aldegid/google-style-popup/app/sass/main.sass
@@ -1,6 +1,3 @@
-@import "vars"
-@import "fonts"
-
 ::selection
 	background-color: #666
 	color: #fff
@@ -11,10 +8,7 @@ body
 	line-height: 1.65
 	font-family: arial, sans-serif
 	overflow-x: hidden
-	color: $text
-	input, textarea
-		border: #666 1px solid
-		outline: none
+	color: #222
 
 .container
 	display: flex
@@ -26,11 +20,14 @@ body
 	min-width: 241px
 	margin-top: 10px
 	a
-		color: $text
+		color: #222
 		text-decoration: none
 		margin-right: 20px
 		&:hover
 			text-decoration: underline
+		&:focus
+			box-shadow: 0 0 0 1.5px rgb(77, 144, 254)
+			outline: none
 	.bell
 		background-color: #737373
 		padding: 1px
@@ -41,6 +38,7 @@ body
 		background-repeat: no-repeat
 		border-radius: 50%
 		background-size: 40%
+		margin-left: 20px
 		&:hover
 			background-color: #000
 	.user
@@ -55,55 +53,59 @@ body
 	height: 0
 	margin: 0
 
-.popup
-	&__icon
-		background-image: url(../img/mnu.png)
-		width: 30px
-		height: 30px
-		margin-right: 20px
-		background-repeat: no-repeat
-		background-position: center
-		opacity: 0.5
-		cursor: pointer
-		&:hover
-			opacity: 1
-	&__inner
-		display: none
-		scroll-behavior: smooth
-		position: absolute
-		overflow: overlay
-		text-align: center
-		top: 60px
-		max-width: 320px
-		max-height: 475px
-		width: 320px
-		right: 20px
+.popup__icon
+	background-image: url(../img/mnu.png)
+	width: 30px
+	height: 30px
+	background-repeat: no-repeat
+	background-position: center
+	opacity: 0.5
+	cursor: pointer
+	&:hover
+		opacity: 1
+
+.popup__inner
+	display: none
+	scroll-behavior: smooth
+	position: absolute
+	overflow: overlay
+	text-align: center
+	top: 60px
+	max-width: 320px
+	max-height: 475px
+	width: 320px
+	right: 20px
+	border: 1px solid rgba(0,0,0,.2)
+	box-shadow: 0 2px 10px rgba(0,0,0,.2)
+
+.popup__inner-container
+	display: flex
+	flex-wrap: wrap
+	overflow: overlay
+	justify-content: space-between
+	margin-top: 20px
+
+.popup__inner-wrap
+	border: 1px solid transparent
+	padding: 0 10px
+	margin: 5px 10px
+	cursor: pointer
+	&:hover, &:focus
 		border: 1px solid rgba(0,0,0,.2)
-		box-shadow: 0 2px 10px rgba(0,0,0,.2)
-		&-container
-			display: flex
-			flex-wrap: wrap
-			overflow: overlay
-			justify-content: space-between
-			margin-top: 20px
-		&-wrap
-			border: 1px solid transparent
-			padding: 0 10px
-			margin: 5px 10px
-			cursor: pointer
-			&:hover, &:focus
-				border: 1px solid rgba(0,0,0,.2)
-				border-radius: 2px
-		&-more
-			display: none
-			padding-bottom: 20px
-		&-item
-			display: block
-			//padding: 5px
-			//margin: 0 5px
-			height: 64px
-			width: 64px
-			background-image: url(../img/all-serv.png)
+		border-radius: 2px
+
+.popup__inner-more
+	display: none
+	padding-bottom: 20px
+
+.popup__inner-item
+	display: block
+	height: 64px
+	width: 64px
+	background-image: url(../img/all-serv.png)
+
+.popup__input:focus + label
+	box-shadow: 0 0 0 1.5px rgb(77, 144, 254)
 
 .g-plus
 	background-position: 0 -413px
